header line spacing fix

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -20,6 +20,7 @@
     a {
       padding: 20px 24px;
       white-space: nowrap;
+      letter-spacing: 0.05em;
 
       color: #fff;
       &:hover {
